[package]
name = "kalypso-program"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
common = { path = "./common" }
ethers ={version = "2.0.10", features = ["abigen", "ws", "rustls"] }
hex = "0.4"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
rsa = "0.6"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sp1-sdk = { path = "../../../sdk" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
secp256k1 = "0.28.0"

kalypso_ivs_models = { git = "https://github.com/marlinprotocol/kalypso-unified.git", branch = "listener-refined", package = "ivs" }
kalypso_generator_models = { git = "https://github.com/marlinprotocol/kalypso-unified.git", branch = "listener-refined", package = "generator" }
kalypso_helper = { git = "https://github.com/marlinprotocol/kalypso-unified.git", branch = "listener-refined", package = "helper" }


[build-dependencies]
sp1-helper = { path = "../../../helper" }